# weechess

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: board.h  copyable.h  game_state.h  location.h  move.h  piece.h  player_state.h
include/argparse/: argparse.h
include/weechess/: attack_maps.h  bit_board.h  board.h  book.h  color_map.h  comptime.h  engine.h  evaluator.h  game_state.h  location.h  move.h  move_generator.h  move_query.h  move_sorter.h  piece.h  player_state.h  search_executor.h  search_task.h  searcher.h  threading.h  transposition_table.h  zobrist.h
include/weechess/fast/: bit_board.h  comptime.h  move_generator.h
lib/: attack_maps.cpp  bit_board.cpp  board.cpp  book.cpp  engine.cpp  evaluator.cpp  fen.cpp  fen.h  game_state.cpp  location.cpp  log.h  move.cpp  move_generator.cpp  move_query.cpp  move_sorter.cpp  piece.cpp  search_executor.cpp  search_task.cpp  searcher.cpp  threading.cpp  transposition_table.cpp  zobrist.cpp
lib/fast/: bit_board.cpp  move_generator.cpp
src/: arg_parser.h  argparse.h  board_printer.cpp  board_printer.h  board_utils.cpp  board_utils.h  console.cpp  console.h  log.cpp  log.h  main.cpp  string_utils.cpp
src/application/: app_controller.cpp  app_controller.h
src/play/: app_controller.cpp  app_controller.h  board_printer.cpp  board_printer.h  console.cpp  console.h  log.cpp  log.h  main.cpp  main.h  string_utils.h
src/uci/: log.cpp  log.h  main.cpp  main.h
tests/: main.cpp  test_bit_board.cpp  test_board.cpp  test_book.cpp  test_evaluator.cpp  test_fen.cpp  test_game_state.cpp  test_move.cpp  test_move_generation.cpp  test_move_query.cpp  test_searching.cpp
tools/bookc/: main.cpp
